// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`not() success 1`] = `
[
  [
    true,
    {
      "kind": "word",
      "text": "foo",
    },
  ],
  [
    true,
    {
      "kind": "word",
      "text": "bar",
    },
  ],
]
`;

exports[`opt() makes failing match ok 1`] = `
{
  "named": {},
  "value": [
    false,
    "foo",
  ],
}
`;

exports[`seq() handles two element match 1`] = `
{
  "named": {},
  "value": [
    "#import",
    "foo",
  ],
}
`;

exports[`tracing 1`] = `
"..repeat   ->|0
  ..wordz   ->|1
    : 'a' (word) 1   ->|2
    ✓ kind 'word'   ->|2
  ✓ wordz   ->|1
  ..wordz   ->|1
    x kind 'word'   ->|2
  x wordz   ->|1
✓ repeat   ->|0"
`;
